rl_assortment_pkg/force-app/main/default/objects/RL_Door_Distribution__c/RL_Door_Distribution__c.object-meta.xml
<CustomObject>
    <description>Door-level distribution record linking an assortment line item to a specific account location (ship-to door). Synced from Anaplan door allocation data.</description>
    <label>Door Distribution</label>
    <nameField>
        <label>Door Distribution Name</label>
        <type>AutoNumber</type>
        <displayFormat>DD-{0000000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <pluralLabel>Door Distributions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>