rl_assortment_pkg/force-app/main/default/objects/RL_Door_Distribution__c/fields/Anaplan_Door_ID__c.field-meta.xml
<CustomField>
    <fullName>Anaplan_Door_ID__c</fullName>
    <description>External key for Anaplan door allocation upsert</description>
    <label>Anaplan Door ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>