rl_assortment_pkg/force-app/main/default/objects/RL_Door_Distribution__c/fields/Cluster__c.field-meta.xml
<CustomField>
    <fullName>Cluster__c</fullName>
    <description>Cluster this door belongs to e.g. Flagship Premium Standard</description>
    <label>Store Cluster</label>
    <length>50</length>
    <type>Text</type>
</CustomField>