rl_assortment_pkg/force-app/main/default/objects/RL_Door_Distribution__c/fields/Door_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Door_External_ID__c</fullName>
    <description>SAP ship-to number or Anaplan door ID for matching</description>
    <label>Door External ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>