rl_assortment_pkg/force-app/main/default/objects/RL_Door_Distribution__c/fields/Door_Name__c.field-meta.xml
<CustomField>
    <fullName>Door_Name__c</fullName>
    <description>Human-readable door or store name</description>
    <label>Door Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>