rl_assortment_pkg/force-app/main/default/objects/RL_Door_Distribution__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <description>Door is included and active in the current assortment plan</description>
    <label>Active in Plan</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>